<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PagamentoActivity">

    <TextView
        android:id="@+id/pagamento_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/pagamento_orientacao"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamento_valor_da_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/pagamento_valor_da_compra"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_orientacao" />

    <TextView
        android:id="@+id/pagamento_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pagamento_preco_da_compra"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_valor_da_compra"
        app:layout_constraintStart_toStartOf="@+id/pagamento_valor_da_compra"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_valor_da_compra" />

    <EditText
        android:id="@+id/pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Numeros do Cartão"
        android:hint="@string/pagamento_numero_do_cartao"
        android:inputType="number"
        android:maxLength="12"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_preco_pacote" />

    <EditText
        android:id="@+id/pagamento_mes_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="Mês"
        android:hint="@string/pagamento_mes_cartao"
        android:textAlignment="center"
        android:inputType="number"
        android:maxLength="2"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="@+id/pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_ano_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Ano"
        android:hint="@string/pagamento_ano_cartao"
        android:textAlignment="center"
        android:inputType="number"
        android:maxLength="4"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/pagamento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_cvc_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:autofillHints="Codigo de seguranca"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/pagamento_cvc_pagamento"
        android:textAlignment="center"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/pagamento_nome_no_cartao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_numero_cartao"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/pagamento_nome_no_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Nome do Titular do Cartão"
        android:hint="@string/pagamento_nome_no_cartao"
        android:digits="@string/pagamento_mascara_nome_no_cartao"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_mes_cartao" />

    <Button
        android:id="@+id/pagamento_botao_finalizar_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pagamento_finalizar_compra"
        android:shadowRadius="10"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_nome_no_cartao"
        android:background="@drawable/botao_redondo_laranja"/>

</androidx.constraintlayout.widget.ConstraintLayout>